Added built gem file to artifacts in gitlab build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,9 @@ build_gem:
         - master
     script:
         gem build ruby-blackjack.gemspec
+    artifacts:
+        paths:
+            - ruby-blackjack-*.gem
 
 deploy_gem:
     stage: deploy
