Change project name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build_gem:
     - gem
     - ruby
   script:
-    - gem build ruby-blackjack.gemspec
+    - gem build blackjack.gemspec
   artifacts:
     paths:
       - ./*.gem
@@ -36,3 +36,31 @@ publish_gem:
     - chmod 0600 ~/.gem/credentials
     - gem push ./*.gem
     - rm ~/.gem/credentials
+
+upload_release_to_github:
+  stage: publish
+  only:
+    - master
+  tags:
+    - python
+  script:
+    - mkdir -p artifacts
+    - git clone https://gitlab.namibsun.net/namboy94/github-release-uploader.git
+    - git clone https://gitlab.namibsun.net/namboy94/changelog-reader.git
+    - python changelog-reader/changelog-reader.py -c CHANGELOG -d current_changelog
+    - python github-release-uploader/github-release-uploader.py namboy94 blackjack $GITHUB_ACCESS_TOKEN
+      $(cat version) current_changelog artifacts -b master
+
+upload_release_to_gitlab:
+  stage: publish
+  only:
+    - master
+  tags:
+    - python
+  script:
+    - mkdir -p artifacts
+    - git clone https://gitlab.namibsun.net/namboy94/gitlab-release-uploader.git
+    - git clone https://gitlab.namibsun.net/namboy94/changelog-reader.git
+    - python changelog-reader/changelog-reader.py -c CHANGELOG -d  current_changelog
+    - python gitlab-release-uploader/gitlab-release-uploader.py namboy94 blackjack $GITLAB_ACCESS_TOKEN
+      $(cat version) current_changelog artifacts -b master -u https://gitlab.namibsun.net
