--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,15 +18,17 @@ build_gem:
     - gem
     - ruby
   script:
+    - mkdir -p artifacts
     - gem build blackjack.gemspec
+    - mv *.gem artifacts/
   artifacts:
     paths:
-      - ./*.gem
+      - artifacts/*
 
 publish_gem:
   stage: publish
-  only:
-    - master
+#  only:
+#    - master
   tags:
     - gem
     - ruby
@@ -34,7 +36,7 @@ publish_gem:
     - mkdir -p ~/.gem/
     - echo $RUBYGEMS_CREDENTIALS > ~/.gem/credentials
     - chmod 0600 ~/.gem/credentials
-    - gem push ./*.gem
+    - gem push artifacts/*.gem
     - rm ~/.gem/credentials
 
 upload_release_to_github:
