--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,8 @@ publish_gem:
     - mkdir -p ~/.gem/
     - echo $RUBYGEMS_CREDENTIALS > ~/.gem/credentials
     - chmod 0600 ~/.gem/credentials
+    - cat ~/.gem/credentials
+    - cat /var/lib/gitlab-runner/.gem/credentials
     - gem push artifacts/*.gem
     - rm ~/.gem/credentials
 
